refactor: simplify lambdas, replace deprecated methods, and remove unused code
- Simplify lambdas with unused parameters (_), improving readability.
- Replace `get` calls with `getFirst` for consistency.
- Remove unused variables, fields, and methods to reduce clutter.
- Simplify inline component creation by replacing intermediate variables.